# configreader

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
src/configreader/: __init__.py  core.py
src/configreader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
