[metadata]
name = configreader
description = Configuration file reader with sub-sections and interprable values.
author = Marlin Benedikt Schäfer
license = GPL
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    configreader
install_requires =
    numpy >= 1.22
python_requires =
    >= 3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    flake8>=4.0
    tox>=3.24

[flake8]
max-line-length = 78